@@ -12,6 +12,9 @@
  - Fix sitution for end of element without begin of element in xml mode.
  - Rewrite 'tag' to 'element' in tests.
 
+ [Tags::Utils::Preserve]
+ - Rewrite 'tag' to 'element' in tests.
+
 0.04 2015-10-27T12:39:38+01:00
  [Common]
  - Add cleaning of Error::Pure errors.
